--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "plugins"]
 	path = plugins
 	url = https://github.com/getpelican/pelican-plugins
+[submodule "themes/niu-x2-sidebar"]
+	path = themes/niu-x2-sidebar
+	url = https://github.com/mawenbao/niu-x2-sidebar
